  [Michele Simionato]
  * Fixed an ordering bug in the IMTs causing two peaks in the UHS in
    some situations
  * Fixed bug in the WongEtAl2022 GMPEs, reported by Thomas Bornstein
  * Added a job.ini parameter `smlt_branch` to reduce the logic tree to
    a specific branch
  * Internal: extended `oq info` to shapefiles

  [Anirudh Rao]
  * Fixed the conditioned GMFs calculator in the case all the
    stations are filtered away

  [Marco Pagani]
  * Fixed the algorithm used to generate kite surfaces

  [Michele Simionato]
  * Changed the weighted quantile algorithm to not depend on numpy.argsort
    (since numpy 1.25 argsort produces a different sorting on machines with
    AVX-512 enabled processors, causing different quantiles when the weights
    are not all equal)
  * Improved error message for missing fields in the exposure CSV files
  * Internal: removed dbserver.user in openquake.cfg
  * Fixed `extract_from_zip` when managing zip files coming from MACOSX

  [Paolo Tormene]
  * Internal: extended the MosaicGetter to a GlobalModelGetter class with
    the ability to associate points to countries

  [Michele Simionato]
  * Removed the obsolete `by_country` hack when managing the global exposures
  * Changed `oq sample` to use pandas for reading/writing CSVs, thus fixing
    the issue of quoted newlines
  * Fixed `oq check_input exposure.xml`
  * Added `rupture_dict` parameter to be used in scenarios

  [Marco Pagani]
  * Fixed a bug in the calculation of Rjb for gridded surfaces and added a
    dependency from alpha_shapes

  [Chris di Caprio]
  * Contributed many new GMPEs for the New Zealand model

  [Michele Simionato]
  * Fixed wrong `mean_rates_by_src` in presence of the colon convention
  * If there are no sources close to the (single) site, do not raise an error
  * Fixed a bug with --hc taking the parent site collection instead of
    the child site collection
  * Extended the exposure field mapping functionality to map the same