@@ -1,5 +1,5 @@
 +--------+-------------+
 | rlz_id | structural  |
 +--------+-------------+
-| 0      | 2.16721E+05 |
+| 0      | 4.22898E+05 |
 +--------+-------------+
