@@ -1,4 +1,5 @@
   [Michele Simionato]
+  * The calculation_mode=ebrisk was not honored when starting from GMFs
   * Fixed an ordering bug in the IMTs causing two peaks in the UHS in
     some situations
   * Fixed bug in the WongEtAl2022 GMPEs, reported by Thomas Bornstein
